--- a/q/275939.html
+++ b/q/275939.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>001</td><td>C++ gcc</td><td>241006T143713Z</td><td><a href="https://codegolf.stackexchange.com/questions/275939/create-251610-matrices-as-quickly-as-possible/275951#275951">jdt</a></td></tr>
+<tr d-ix="0"><td>038</td><td>C++ gcc</td><td>241006T143713Z</td><td><a href="https://codegolf.stackexchange.com/questions/275939/create-251610-matrices-as-quickly-as-possible/275951#275951">jdt</a></td></tr>
 <tr d-ix="1"><td>1033</td><td>Python 3.12</td><td>241005T114540Z</td><td><a href="https://codegolf.stackexchange.com/questions/275939/create-251610-matrices-as-quickly-as-possible/275943#275943">138 Aspe</a></td></tr>
 <tr d-ix="2"><td>5225</td><td>Rust</td><td>241005T121443Z</td><td><a href="https://codegolf.stackexchange.com/questions/275939/create-251610-matrices-as-quickly-as-possible/275944#275944">138 Aspe</a></td></tr>
 <tr d-ix="3"><td>027</td><td>Rust</td><td>241004T230501Z</td><td><a href="https://codegolf.stackexchange.com/questions/275939/create-251610-matrices-as-quickly-as-possible/275941#275941">Anders K</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, about 1 second in TIO</h1>
-
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, .38 seconds unofficial time</h1>
 <p>C++ port of @Ander Kaseorg's Rust code.</p>
+
 <pre class="lang-cpp prettyprint-override"><code>#include &lt;iostream&gt;
 #include &lt;unordered_set&gt;
 #include &lt;vector&gt;
@@ -43,14 +43,10 @@
 #include &lt;iomanip&gt;
 #include &lt;numeric&gt;
 #include &lt;chrono&gt;
-
 const int ROWS = 6;
 const int COLS = 6;
 using Matrix = std::array&lt;std::array&lt;bool, COLS&gt;, ROWS&gt;;
-int totalCount = 0;
-
-// #define PRINT_ALL 1
-
+int count = 0;
 // Optimized custom hash function for std::unordered_set of matrices
 struct MatrixHash {
     size_t operator()(const Matrix&amp; m) const {
@@ -58,9 +54,9 @@ struct MatrixHash {
         for (const auto&amp; row : m) {
             size_t rowHash = 0;
             for (bool cell : row) {
-                rowHash = (rowHash &lt;&lt; 1) | cell; &#32;
+                rowHash = (rowHash &lt;&lt; 1) | cell;
             }
-            hash ^= rowHash + 0x9e3779b9 + (hash &lt;&lt; 6) + (hash &gt;&gt; 2); &#32;
+            hash ^= rowHash + 0x9e3779b9 + (hash &lt;&lt; 6) + (hash &gt;&gt; 2);
         }
         return hash;
     }
@@ -125,7 +121,8 @@ void search(
     uint32_t min_row_sum,
     bool equal_row,
     std::array&lt;bool, COLS&gt;&amp; equal_cols,
-    std::unordered_set&lt;Matrix, MatrixHash&gt;&amp; found
+    std::unordered_set&lt;Matrix, MatrixHash&gt;&amp; found,
+    std::string&amp; out
 ) {
     if (row_sum + COLS - j &lt; min_row_sum) return;
 
@@ -138,16 +135,15 @@ void search(
                     row_sums[r] = std::accumulate(m[r].begin(), m[r].end(), 0u);
                 }
                 found_permutations(m, row_sums, 0, false, found);
-                totalCount++;
-#ifdef PRINT_ALL
+                ++count;
+               &#32;
                 for (const auto&amp; row : m) {
                     for (bool cell : row) {
-                        std::cout &lt;&lt; (cell ? '1' : '0');
+                        out += cell ? '1' : '0';
                     }
-                    std::cout &lt;&lt; " ";
+                    out += ' ';
                 }
-                std::cout &lt;&lt; "\n";
-#endif
+                out += '\n';
             }
             return;
         }
@@ -162,12 +158,12 @@ void search(
     if (!equal_col || !m[i][j - 1]) {
         m[i][j] = false;
         equal_cols[j] = equal_col &amp;&amp; !m[i][j - 1];
-        search(m, i, j + 1, row_sum, min_row_sum + (equal_row &amp;&amp; m[i - 1][j]), equal_row &amp;&amp; !m[i - 1][j], equal_cols, found);
+        search(m, i, j + 1, row_sum, min_row_sum + (equal_row &amp;&amp; m[i - 1][j]), equal_row &amp;&amp; !m[i - 1][j], equal_cols, found, out);
     }
 
     m[i][j] = true;
     equal_cols[j] = equal_col &amp;&amp; m[i][j - 1];
-    search(m, i, j + 1, row_sum + 1, min_row_sum, equal_row &amp;&amp; m[i - 1][j], equal_cols, found);
+    search(m, i, j + 1, row_sum + 1, min_row_sum, equal_row &amp;&amp; m[i - 1][j], equal_cols, found, out);
     equal_cols[j] = equal_col;
 }
 
@@ -182,17 +178,24 @@ int main() {
     Matrix m{};
     std::unordered_set&lt;Matrix, MatrixHash&gt; found;
 
-    search(m, 0, 0, 0, 0, false, equal_cols, found);
+    std::string out;
+    out.reserve(11000000);
+
+    search(m, 0, 0, 0, 0, false, equal_cols, found, out);
 
     auto end = std::chrono::steady_clock::now();
     std::chrono::duration&lt;double&gt; elapsed = end - start;
+   &#32;
+    std::cerr &lt;&lt; "Count: " &lt;&lt; count &lt;&lt; '\n';
+    std::cerr &lt;&lt; "Elapsed time: " &lt;&lt; elapsed.count() &lt;&lt; " seconds" &lt;&lt; '\n';
 
-    std::cout &lt;&lt; "Total count: " &lt;&lt; totalCount &lt;&lt; '\n';
-    std::cout &lt;&lt; "Elapsed time: " &lt;&lt; elapsed.count() &lt;&lt; " seconds" &lt;&lt; '\n';
+    std::cout &lt;&lt; out;
+   &#32;
 }
 
+
 </code></pre>
-<p><a href="https://tio.run/##pVdtb9s2EP6uX8GkQCzBSmo7QItYtoehGNAB6TK0BfYh9QxFohO6kuiRVNKu8V@fd3yRSMmy4WxG0ZhH3sPjw7uH52S9Pr9Pku32FSmSrEwxmhDKBcNxPvOsrSwoSzHD6YJj4U484kRQ5lri7J4yIh4a/jFj8XfXIMp1hl0DoXlckLVrKsocM5K4puSB0YLOPC@hBReIFAJ9vPnjE5qiN5Fje3dzbWwlJ8U9@hALRr6BhYt0PFbBTJyvd5RmoXKahQpvFnkSRlARZ@9oCV@naBB53uvX6FWKl6TA6PePv/72efHz9TUaKvvNWpCc/I1TlJRc0Bw9xPwBLcsiEYQWaEmZ3rzBJKJLlMvYEsw9YL1MhIn1vfT@4SH4cEBdwNI1ZjFw7Qe@PqheeIbyAGmDXu64qBBU5NWEDMO4x6WgZ4jRJzSWENbZAYDZ9zsYNY6kDSU4ywABVrYx5McC@NXXyQQNA/SsHCOEGi6bxkiF/@e0BumjwbcrfPn27dXdFQz8BwP3JqhHsxkaBS6qRWRYlKxQoPosG28DV/pISQrHKYt0AQTnpYjlfXFfLakpDtVQE@ckTglZcjlaCJM1is4FL3Ou11fTiOixIkzvglNt2s2Jid40dBIBgFWEXkUxWSKfoOlUbevyLieqDdr3AUkqWFzwNeW4MWGqIxc/Nh23LAthpTIA/kxUlUSo3191XbdyMLlDtA8BHxml9CFdPvKTi9vV/JbMwSWHPzCIdtZtWpnSzFdJI6dM@Lm4uMP3pPCDEGAvcJH6QRC9kIijmKhO9RImKvYOMOFQIf4TFzIHFB@ELyQlOAVSGqwYWkJ0O2@LwTBELcuoK1Q5iyDRh7WmJkmZl1kssCz0od1Njcx2gzKI9kKNuqFGDajRQShT4gpFEOzLAHUEAXDvmkcarQNjE3RfJ5TfBSk4VikmWo6blt7o/3HGsYPVITJ5aBUD8qOPINxaH7RD0BLvKqck88ojkt@dGhu245f5UO1yS4ZzdDJFdjzvOu4dvP9fowPSLDHzCizfg6KL8iley6XzECmHDsqPJAaeR7xLyks2272mjXq7P@GYJfax1m8CV8bOd6Ct6/V41RqbM7SsOSkWjRn1LuC/yjiTdudh2GlPzsyyhGb8/z4gJgQgV7VL50rUnNgCU0@RV7us5JsjV7vXDTkXNR6gzpepmtSVBC0UqFIgF2qD1ul9SdT52tYZ0hbrdq0wrb/MqRK2T3/rwmDzDj3KwewIqRwd0qPNi1N9AAkeg2zsz3Pbk/b7EXTGS@hHbTPazcMRDd9LG7vG9SS0FLIR85XPT6g37IFnb9DriL@blx2oU3R6DJ9Nny8FOL2CGyHLA9pVZfXu7KrZ6Dq1gGrJtNN2yvGpqxjMUrCqVrNd51DAsMIWs3rm6zo7sYuen9GJ7omgQocNnTWtEuConGkHYWDdbdDZWQPNuhi1g2QkIfCgBLfSqAYR0GnbMwIcoCko2AnKoDF14syFrnA1kttwYw9jaTt4jp1jHDiCHri6i/YdYn@ge6OJzDPyISaFfURkt5jHUinMlelGR8RMVMqif83CsyVwnH5fJBlNvo7HBX3yA5MM3a@AE0qlfdYC2pplviRxN@6Bkyye2/FWMMe9JpqWKsSa9oHzz6hYF5eWDKjUo6iwlW5WpSVT6jlJaXmXYSAki9ccSzSJea5pdjmsNeKz1E/ocUFAx6AyYHJ@5cOo96XoRR1@v5gd4Fc@No5m0wsFBtesZItjUNuUn1qsjbfd/pMss/ieb89vLrfnuSRsWsAJHvG/" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##nVdNb@M2EL3rVzApYEuwk7UdYBdr2e5hUWAPXQToHnpIXUOR6IReUXRJKtmP@K/XHX5IpGTZdVYIYnHIeRw@zjxS6XZ79ZCm@/0vpEjzMsNoRpiQHCd0EThbWTCeYY6zlcDS73jCqWTctyT5A@NEPjb8E86Tb75Bltsc@wbCaFKQrW8qSoo5SX1T@shZwRZBygohESkk@uP2z89ojt7Gnu3D7e/WVgpSPKBPieTkK1iEzKZTHcvMe71nLB9qp8VQ4y3iQMGkrIT/czSKgzdv0O1WEkq@4wylpZCMosdEPKJ1WaSSsAKtGTfwDaoQWyOqZk@xCIDWMpU2mo/K@0eA4BGAuoKhW8wTIDOMQrMUM7CHaISMwQz3XHQIOsCqQ4Vh3ZNSsh7i7BlNFYRz9gCg9@MBRo2jiEEpznNAgJFtDPU4gLB6nc3QOEIv2rEJumu0dPB/z2uIARp9fY9v3r17f/8eGuGjBXsb1a3FAk0ih@nwOJYlLzSk6d4FuzgInhjJYCllka2AXFrKRO2VCPWQmt6hbhrSvLQoIQduJitpc0JTuRIlFWZ81Y2IaWuyzCw4M6bDfJiZSYdeEgCwjjCo6CVrFBI0n@tpfc5VRzVBey8gQSVPCrFlAjc6bO5T@WPXscMqzTd69@FnpmsgRoPBpmurtYPNG2J8CPioKJUP6fJRD5V3m@UdWYILhR9oxAfjdq08aeaqolEwLkMqr@/xAynCaAiw17jIwiiKX0nEWUxUq3oNExV7J5jwqJA/xYXKAc0HEStFCc6AlAYrlpYhulu2hWA8RC3LpCtU1Ysg0ce1YqZpScs8kVgV@djNplt2ulEZxUehJt1QkwbU5CSULXGNIgkOVYAmggi4980Tg9aBsYu6txPK75oUAusUk9Ex1doF7j/OBfawOkSGDp1iQH4MEIRb64NxiFrCXeWUYl57xOrdq7FxO36VD9Usd2S8RBdz5NrLruXew@H@5ZQwK0xagdEjKKYon5OtGrocIu3QQfmZxMDRiA9Jec1kh9sEpQNq8BknPHUHtTkThDZ2ngNtXa/bm1bbrqFlpaRYNXr0uYD/KZNc2b2D4eDy0bPDUpaLnzhAPBe4acC9p4dYKRvHig0MKNdXpCstdV7Eka2yOKhdNuokUqP9JIBMjBvHUud5VXWa@loTKG6YAQYag1HvY6nVeQbXedOW8HYFcaPK3KsdfkyV63Lhyw6VomD25FW1TqnU7tUFMIK0T0BMjmf/YKBvoocd3RSccft77S2veiCf0GBuBv@K@uM@uPRH/bjTYRecgOij/jnkVaP/KvqnFKvK2sPeTfNq6@U6qoXSdbsuz6euXTArmaoumO3qhrKFEa6E9eFe19GFG/Tygi7MTQgqcNxQV3tBAhydE@0gLKw/Der1GmjOxWocJBsZAg9aZitlahABt2u3RoADNA0FM0GaN7ouvL6hL1dWgtSGRQ2C3IocdycXc7CWE@swDV9y0bGV/E@0R0OK7THyKSGFO0TUbZEmShPs5pmLjky4rDTEfKoqLcZJ9m2V5iz9Mp0W7DmMbFp0nwJeKJXKOQuoaJ6HisnDuEde2gT@jbeCOe80Mdz4IZrTRJFlcODlmmO4LT3hcDwe6adeU71ZI@/PCtzRHXAUgraeRWAdXDUqK7lW11nGyvscA415shVYoSnMK7M5xtHzxpyrb8zLD0php@hSNcx3P7w42WkO/s1CS0Kx9bGzXWtfyAo1DMgALc7EpcMK7CeKwVPqBl01sSrV9vt/03WePIj91e3N/ooqOucFLO0J/wc" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.12/" rel="nofollow noreferrer">Python 3.12</a>, 10.33 s unofficial time</h1>
 <p>Python port of <a href="https://codegolf.stackexchange.com/a/275941/110802">@Ander Kaseorg's Rust code</a>.</p>
