--- a/q/275973.html
+++ b/q/275973.html
@@ -26,26 +26,45 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>032</td><td>JavaScript Node.js</td><td>241009T051943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275985#275985">tsh</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Java</td><td>241009T080943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275990#275990">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>034</td><td>APL+WIN</td><td>241009T075945Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275988#275988">Graham</a></td></tr>
-<tr d-ix="3"><td>011</td><td>05AB1E</td><td>241009T074407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275987#275987">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>043</td><td>Python 2</td><td>241009T055759Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275986#275986">tsh</a></td></tr>
-<tr d-ix="5"><td>007</td><td>Nekomata + e</td><td>241009T021349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275983#275983">alephalp</a></td></tr>
-<tr d-ix="6"><td>045</td><td>JavaScript ES6</td><td>241008T215928Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275979#275979">Arnauld</a></td></tr>
-<tr d-ix="7"><td>055</td><td>Python 3</td><td>241008T214308Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275977#275977">squarero</a></td></tr>
-<tr d-ix="8"><td>019</td><td>Charcoal</td><td>241008T204821Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275976#275976">Neil</a></td></tr>
+<tr d-ix="0"><td>017</td><td>x8664 machine code</td><td>241010T160838Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/276016#276016">m90</a></td></tr>
+<tr d-ix="1"><td>032</td><td>JavaScript Node.js</td><td>241009T051943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275985#275985">tsh</a></td></tr>
+<tr d-ix="2"><td>049</td><td>Java</td><td>241009T080943Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275990#275990">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>034</td><td>APL+WIN</td><td>241009T075945Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275988#275988">Graham</a></td></tr>
+<tr d-ix="4"><td>011</td><td>05AB1E</td><td>241009T074407Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275987#275987">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>043</td><td>Python 2</td><td>241009T055759Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275986#275986">tsh</a></td></tr>
+<tr d-ix="6"><td>007</td><td>Nekomata + e</td><td>241009T021349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275983#275983">alephalp</a></td></tr>
+<tr d-ix="7"><td>045</td><td>JavaScript ES6</td><td>241008T215928Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275979#275979">Arnauld</a></td></tr>
+<tr d-ix="8"><td>055</td><td>Python 3</td><td>241008T214308Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275977#275977">squarero</a></td></tr>
+<tr d-ix="9"><td>019</td><td>Charcoal</td><td>241008T204821Z</td><td><a href="https://codegolf.stackexchange.com/questions/275973/decide-symmetry-of-fractions/275976#275976">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
+<div id="pu0" class="pu"><h1>x86-64 machine code, 17 bytes</h1>
+<pre><code>31 D2 A9 D1 EF 11 D2 D1 EE 75 F8 39 FA 0F 94 C0 C3
+</code></pre>
+<p><a href="https://tio.run/##hZJfb9owFMWf7U9xmoliQ9pBWyGNwKZpz3vZ06TSh8xxiKvEoPxpkzG@@rJrI1raSt1Lcp1z/LvnOlYXa6X6Pq4KgR@B4OmctZsSOmlD9@Ds8ldXa0zar594OWdV5jQTYspZnKgTn1eqg3Jvf6PkTBXbo8GQQRMnzjkrdc1lABlxlcUlUmFsDdsUIVyRaEvKB2NV3iQai6pOzOYy@8ydWMTGentcrlUIv380osWD5DvOnELtuoizbUmLVASD6XUVhAgCgrKUJhMtlphOIrRYYHZD7/FYcsa2Te1wYjgZYkziRzLJE9DKAnhJ@T9k8Aayss@MziWJ0GFB75kvXEWgnWMdJ7gyoAk6t@293k/NSf9Ddpxjii84REmFOxc5xxBDD3pKurL@w/405PdYZcZqqE2i5z7voSVnyQa7ow@DydVPl2wpRGMrs7Y68b9kJFN5S6nuZLTHY2Zy7WY9I0L77fr0OCAGBu5@VZLOJUTrxVfJ6Lo0pXXd933/V6V5vK76i4Ju7JIoOqd6dvMP" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<p>Following the standard calling convention for Unix-like systems (from the System V AMD64 ABI), this takes the numerator in EDI and the denominator in ESI as 32-bit integers, and returns a Boolean value in AL, 1 if symmetric and 0 if not.</p>
+<p>In assembly:</p>
+<pre><code>f:  xor edx, edx    # Set EDX to 0.
+    .byte 0xA9      # Subsumes the following two instructions into 'test eax, 0xD211EFD1'.
+r:  shr edi, 1      # Shift EDI right by 1 bit. The removed bit goes into CF.
+    adc edx, edx    # Add EDX+CF to EDX, which puts the bit from CF onto that value.
+    shr esi, 1      # Shift ESI right by 1 bit.
+    jnz r           # Jump back, to repeat, if the result is nonzero.
+                    # If the denominator is 2^n, n bit transfers will take place.
+    cmp edx, edi    # Compare the values of EDX and EDI.
+    sete al         # Set AL to 1 if they are equal, 0 otherwise.
+    ret             # Return.
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 32 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>q=&gt;g=p=&gt;(q&gt;&gt;=1)?g(p/2^p%2*q*q):p
 </code></pre>
 <p><a href="https://tio.run/##bc5LCsIwFIXhucsICPcWrCbagYXEmStwVhVCbaMS8miq4Opjhz7u9Buc89/1U6d2uIVx4fyly73MUSojg1QQlZIcdwbCUpzDXBSxiFiH3HqXvO1K6w2w5jA8xuvrxHD26T1whBX@okBY/@EGYUshryb9YnZ0zV7bRN9xJFBQDZzCimwgcRrNbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Instead of accept reduced form <code>p/q</code>, this function may accept any even number <code>q</code> as well. We can extends the definition about symmetry as padding 0s at beginning do not affect the number value.</p>
 <p>First, if <code>q == 1</code>, the output should be true iff <code>p == 0</code>.</p>
-<p>Otherwise, we recursively test if bits read from right is matching bits read from left: We simply check if the last digits <code>(p%2)</code> is matching to the first digits <code>(p&amp;q*q/2)</code>. If they are matching, clear them to 0 and divide <code>p</code> by 2. So we can test remaining bits. If they do not match, set the left side bit to 1 on <code>p</code> and also divide <code>p</code> by 2. So after iteration, <code>p</code> must left to be non-zero.</p>
+<p>Otherwise, we recursively test if bits read from right is matching bits read from left: We simply check if the last bit <code>(p%2)</code> is matching to the first bit <code>(p&amp;q*q/2)</code>. If they are matching, clear them to 0 and divide <code>p</code> by 2. So we can test remaining bits. If they do not match, set the left side bit to 1 on <code>p</code> and also divide <code>p</code> by 2. And after iteration, <code>p</code> must left to be non-zero. <code>q</code> is shifted right by 1 in each iteration. And the iteration is done as long as <code>q == 1</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1>Java, 49 bytes</h1>
+<div id="pu2" class="pu"><h1>Java, 49 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>(n,d)-&gt;{while((n/=2)&gt;0)d=d/2^d%2*n*n;return d&lt;1;}
 </code></pre>
@@ -63,13 +82,13 @@
   return d&lt;1;}     //  After the loop: return whether `d` is now 0
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>APL+WIN, 34 bytes</h1>
+<div id="pu3" class="pu"><h1>APL+WIN, 34 bytes</h1>
 <p>Prompts for numerator followed by denominator:</p>
 <pre><code>i=+/(⌽i↓n)=(i←d÷2)↑n←((d←2⌈⎕)⍴2)⊤⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlyPWooz3tf6attr7Go569mY/aJudp2moA6Qkph7cbaT5qm5gHZGtopABJo0c9HUCNmo96twBlupYA2f@B2rn@p3EZcBlypXEZcxkBSUsuEyBpaAqhwBJGYNIQLG0KJg25TAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 11 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 11 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>b0ÛDÂQ*g;oQ
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$n,d\$</span>.</p>
@@ -90,13 +109,13 @@
             # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 43 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 43 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda a,b:int(bin(a/b*2+1)[:1:-1],2)^a%b^b
 </code></pre>
 <p><a href="https://tio.run/##Tc5BCsIwEAXQvacYECGxY82MdmHAk6iFDFIs1FhKN54@tmrSbN98/p/@PT5enkNzvobOPeXuwKHY1o9KWq/cXrZckL5Ysju6IevabaSW0A9zpFEGgbSGNZjSrCIeEPiLVFLCE8Lxh1N0YaqST@m/L9dYT1k9J8xHKY6abLRKn@RKcXL@JHwA" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 7 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-e</code>, 7 bytes</h1>
 <pre><code>Ƃ;↔=#Ë=
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJuqlLsgqWlJWm6FquPNVk_aptiq3y423ZJcVJyMVR8wU1NAwVDLmMFIy5LBRMuQ1MgYWqoYMFlCBQ1AmJDoIwpEBsqmEB0AAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -111,21 +130,21 @@
       =     Check if equal to the denominator
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
+<div id="pu7" class="pu"><h1>JavaScript (ES6), 45 bytes</h1>
 <p>Expects <code>(numerator)(denominator)</code>. Returns <strong>0</strong> for truthy, or <strong>1</strong> for falsy.</p>
 
 <pre class="lang-none prettyprint-override"><code>p=&gt;q=&gt;(g=k=&gt;k&amp;&amp;(k^p/(q/=2))&amp;1|g(k/2))(p,q*=q)
 </code></pre>
 <p><a href="https://tio.run/##bc47DsIwEEXRnmW4iGYQEGxIQTEuWQFdACkK@YAjf@KAhMTeDYIGiLun07x7KW6FL/uzHebanKpQU7AkHUloSJFUSQLqaFNwKQnEhD8aUOlrgZ25KTkMpdHedNWiMw2wfNdfh/Z@YDj59hqWCBz/cYUgRrhBWI@QZx/9YbbX@bbofOSOx@5EDHmsIYshfyeEJw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>lambda a,b:bin(a//b)[:1:-1]==f'{a%b:0{len(bin(b))-3}b}'
 </code></pre>
 <p>Takes input like <code>f(numerator, denominator)</code>.</p>
 <p><a href="https://tio.run/##Tc5BCsIwEIXhvacYEGkCaZtp7MJATqIuMmiwUGORbqT07LFVkmb7vYF/hs/4eHkVnLmE3j7pZsEK0tR5Zuua@FmjLvFqjCsmeyAtp/7u2ToT56WaaS7C8O78yByTApBz2IOs5C6iEtD8ECtMeBJw/ONyujG2yZfr6HzbYwCzQJMwz2LMyizbpl9yxRhdfwlf" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 19 bytes</h1>
 <pre><code>≔↨Ｎ²θ∧⁼θ⮌θ⁼Ｌθ⊗⊖Ｌ↨Ｎ²
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/9@xuDgzPU/DKbE4VcMzr6C0xK80Nym1SENTR8EIiAs1rbkCijLzSjQc81I0XAtLE3OKNQp1FIJSy1KLgFoKNYGKoMI@qXnpJRlAIR0Fl/zSpJzUFA2X1OSi1NzUvBIgGyqN3SYIsP7/31LB5L9uWQ4A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes two integers as input. Explanation:</p>
