--- a/q/276019.html
+++ b/q/276019.html
@@ -26,19 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>MATL</td><td>241010T190850Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276023#276023">Luis Men</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Japt x</td><td>241010T190412Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276022#276022">Shaggy</a></td></tr>
+<tr d-ix="0"><td>016</td><td>Japt x</td><td>241010T190412Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276022#276022">Shaggy</a></td></tr>
+<tr d-ix="1"><td>015</td><td>MATL</td><td>241010T190850Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276023#276023">Luis Men</a></td></tr>
 <tr d-ix="2"><td>050</td><td>JavaScript Node.js</td><td>241010T184724Z</td><td><a href="https://codegolf.stackexchange.com/questions/276019/how-many-dots-are-there/276021#276021">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 15 bytes</h1>
-<pre><code>0h'ij.;!?::'!=z
-</code></pre>
-<p><a href="https://tio.run/##y00syfn/3yBDPTNLz1rR3spKXdG26v9/9eCCjMy8CoX8NIWknMTkbIXC0sSikiodhazSlPRUhdxKhbL8ckV1AA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##Lc27CsJAEIXh3qeYNG4jYh2RFAo2FoI@gGN2kozuZOJe1OTl4xZ2B74Dv2B0823edIYf621RlaUpdtN8uM7mMnTcf0EbuDusn/BK6OO0gkeyLYGM8NZPYRbmpJ4EeAhJSrDq1EPgCCgUq8xnr61HEe5bOKdpchRgCXu1BEd1TX78y3kN5LlGb1mFLGOI3HPkkKVRL@gsdaOlkNzQ6Xd0GCmT@QE" rel="nofollow noreferrer">verify all test cases</a>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>17</s> 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>17</s> 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<p>This would be <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=2.0a0&amp;flags=LXg&amp;code=IiEuOjo7P2lqIqyj6Fg&amp;input=IkxvcmVtIGlwc3VtOiBkb2xvciBzaXQgYW1ldD8i" rel="nofollow noreferrer">14 bytes</a> in v2 but there seems to be a bug with <code>S.è(x)</code> that only counts a maximum of 1 of <code>x</code>.</p>
 <pre><code>&quot;!.::;?ij&quot;¬£èXi%
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=IiEuOjo7P2lqIqyj6FhpJQ&amp;input=IkxvcmVtIGlwc3VtOiBkb2xvciBzaXQgYW1ldD8i" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 15 bytes</h1>
+<pre><code>0h'ij.;!?::'!=z
+</code></pre>
+<p><a href="https://tio.run/##y00syfn/3yBDPTNLz1rR3spKXdG26v9/9eCCjMy8CoX8NIWknMTkbIXC0sSikiodhazSlPRUhdxKhbL8ckV1AA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##Lc27CsJAEIXh3qeYNG4jYh2RFAo2FoI@gGN2kozuZOJe1OTl4xZ2B74Dv2B0823edIYf621RlaUpdtN8uM7mMnTcf0EbuDusn/BK6OO0gkeyLYGM8NZPYRbmpJ4EeAhJSrDq1EPgCCgUq8xnr61HEe5bOKdpchRgCXu1BEd1TX78y3kN5LlGb1mFLGOI3HPkkKVRL@gsdaOlkNzQ6Xd0GCmT@QE" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<h3>How it works</h3>
+<pre><code>0h         % Implicit input. Attach character 0. This is needed to avoid empty string
+'ij.;!?::' % Push this string. Note that ':' appears twice
+!          % Transpose into a column vector
+=          % Matrix of all pair-wise comparisons
+z          % Number of non-zeros. Implicit display
+</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 50 bytes</h1>
 
